cluster/workloads/_namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: media
---
apiVersion: v1
kind: Namespace
metadata:
  name: exporters
---
apiVersion: v1
kind: Namespace
metadata:
  name: home
---
apiVersion: v1
kind: Namespace
metadata:
  name: system
---
apiVersion: v1
kind: Namespace
metadata:
  name: flux
---
apiVersion: v1
kind: Namespace
metadata:
  name: logs
