cluster/workloads/elastic.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: elasticsearch
  name: elasticsearch-master-alt
  namespace: logs
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: system-cf-access-auth@kubernetescrd
spec:
  rules:
    - host: es.k8s.nickysemenza.com
      http:
        paths:
          - backend:
              serviceName: elasticsearch-master
              servicePort: 9200
            path: /
